Fix block popular-product

--- a/app/blocks/_sidebar-post.html
+++ b/app/blocks/_sidebar-post.html
@@ -1,7 +1,6 @@
 							<div class="@@sidebar-post__class sidebar-post">
 								<div class="sidebar-post__title sidebar__title">Latest post</div>
-								<a href="blog-single.html"> 
-									<div class="sidebar-post__item">
+								<a class="sidebar-post__item" href="blog-single.html">
 									<div class="sidebar-post__item-img">
 										<img src="img/sidebar-post/01.jpg" alt="Img post">
 									</div>
@@ -9,10 +8,8 @@
 										<div class="sidebar-post__item-title">Best Non-Dairy Milk for Coffee</div>
 										<div class="sidebar-post__item-date">July 12, 2020</div>
 									</div>
-									</div>
 								</a>
-								<a href="blog-single.html">
-									<div class="sidebar-post__item">
+								<a class="sidebar-post__item" href="blog-single.html">
 									<div class="sidebar-post__item-img">
 										<img src="img/sidebar-post/02.jpg" alt="Img post">
 									</div>
@@ -20,10 +17,8 @@
 										<div class="sidebar-post__item-title">How To Properly Store Whole Bean Coffee</div>
 										<div class="sidebar-post__item-date">July 11, 2020</div>
 									</div>
-									</div>
 								</a>
-								<a href="blog-single.html">
-									<div class="sidebar-post__item">
+								<a class="sidebar-post__item" href="blog-single.html">
 									<div class="sidebar-post__item-img">
 										<img src="img/sidebar-post/03.jpg" alt="Img post">
 									</div>
@@ -31,10 +26,8 @@
 										<div class="sidebar-post__item-title">Best Coffee Grinders 2020</div>
 										<div class="sidebar-post__item-date">July 9, 2020</div>
 									</div>
-									</div>
 								</a>
-								<a href="blog-single.html">
-									<div class="sidebar-post__item">
+								<a class="sidebar-post__item" href="blog-single.html">
 									<div class="sidebar-post__item-img">
 										<img src="img/sidebar-post/04.jpg" alt="Img post">
 									</div>
@@ -42,17 +35,14 @@
 										<div class="sidebar-post__item-title">Milk Frothing for Beginners 5 Tips</div>
 										<div class="sidebar-post__item-date">July 5, 2020</div>
 									</div>
-									</div>
 								</a>
-								<a href="blog-single.html">
-									<div class="sidebar-post__item">
+								<a class="sidebar-post__item" href="blog-single.html">
 									<div class="sidebar-post__item-img">
 										<img src="img/sidebar-post/05.jpg" alt="Img post">
 									</div>
 									<div class="sidebar-post__item-body">
 										<div class="sidebar-post__item-title">How to Make a Latte</div>
 										<div class="sidebar-post__item-date">July 1, 2020</div>
-									</div>
 									</div>
 								</a>
 							</div>
