--- a/app/blocks/_sidebar-block.html
+++ b/app/blocks/_sidebar-block.html
@@ -1,7 +1,9 @@
 							<div class="@@sidebar-block__class sidebar-block">
-								<div class="sidebar-block__img">
-									<a href="#">
-										<img src="@@sidebar-block__img" alt="sidebar-img">
-									</a>
-								</div>
+								<a class="sidebar-block__img" href="detail.html">
+									<picture>
+										<source srcset="img/information/01.png" type="image/jpg" media="(max-width: 550px)">
+										<source srcset="img/information/2222.jpg" type="image/jpg" media="(max-width: 991.98px)">
+										<img src="img/information/03.jpg" alt="#">
+									</picture>
+								</a>
 							</div>
