--- a/app/blocks/_sidebar-new.html
+++ b/app/blocks/_sidebar-new.html
@@ -5,7 +5,10 @@
 										<div class="sidebar-new__item-img">
 											<img src="img/sidebar-new/01.jpg" alt="">
 										</div>
-										<div class="sidebar-new__item-title">BLACK+DECKER 5-Cup Coffeemaker<span>$24.99</span></div>
+										<div class="sidebar-new__item-title">
+											BLACK+DECKER 5-Cup Coffeemaker
+											<div class="sidebar-new__item-price"><span>$69.99</span></div>
+										</div>
 									</div>
 								</a>
 								<a class="sidebar-new__link" href="detail.html"> 
@@ -14,7 +17,10 @@
 											<img src="img/sidebar-new/02.jpg" alt="">
 										</div>
 										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Single Serve K Cup Coffee Maker<span>$59.99</span></div>
+											<div class="sidebar-new__item-title">
+												Single Serve K Cup Coffee Maker
+												<div class="sidebar-new__item-price sidebar-new__item-price--old">$69.99<span>$79.99</span></div>
+											</div>
 										</div>
 									</div>
 								</a>
@@ -24,7 +30,10 @@
 											<img src="img/sidebar-new/03.jpg" alt="">
 										</div>
 										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Keurig K250 Coffee Maker<span>$229.95</span></div>
+											<div class="sidebar-new__item-title">
+												Keurig K250 Coffee Maker
+												<div class="sidebar-new__item-price"><span>$69.99</span></div>
+											</div>
 										</div>
 									</div>
 								</a>
@@ -34,7 +43,9 @@
 											<img src="img/sidebar-new/04.jpg" alt="">
 										</div>
 										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Single Serve Coffee Maker<span>$59.99</span></div>
+											<div class="sidebar-new__item-title">Single Serve Coffee Maker
+												<div class="sidebar-new__item-price"><span>$59.99</span></div>
+											</div>
 										</div>
 									</div>
 								</a>
