--- a/app/index.html
+++ b/app/index.html
@@ -35,9 +35,10 @@
 							<div class="information__block-item information__block-item--high">
 								<a href="detail.html">
 									<picture>
-										<source srcset="img/information/2222.jpg, img/information/2222.webp" type="image/jpg" media="(max-width: 768px)">
-										<source srcset="img/information/01.png, img/information/01.webp" type="image/jpg">
-										<img class="img" src="img/information/01.png" alt="#">
+										<source srcset="img/information/2222.webp" type="image/webp" media="(max-width: 768px)">
+										<source srcset="img/information/2222.jpg" type="image/jpg" media="(max-width: 768px)">
+										<source srcset="img/information/01.webp" type="image/webp">
+										<img src="img/information/01.png" alt="#">
 									</picture>
 								</a>
 							</div>
