Add timer and fix bugs

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -1112,5 +1112,7 @@
 	</div>
 
 	@@include('blocks/_js.html')
+	<script src="js/nouislider.min.js"></script>
+	<script src="js/price-filter.min.js"></script>
 </body>
 </html>
